--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.5",
     "react": "^16.9.0",
+    "react-bulma-components": "^2.3.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.2"
   },
